 This file describes changes in the orb package beginning from version 1.2:
===========================================================================

==========================
 Changes from 3.0 -> 3.1:
==========================

  - Fixed bug in HTAdd (calling AddHT).
  - Major reorganisation of product replacers (accelerator, multiple accus)
  - AddGeneratorToProductReplacer new


==========================
 Changes from 2.0 -> 3.0:
==========================

  - Fixed some bugs for hash functions for compressed vectors/matrices.
  - Fixed a bug in the depth and depthmarks of orbits
  - Improved MakeSchreierTreeShallow for great depths
  - New implementation of AVL trees.
  - C-part to speed up AVL trees and hash tables.
  - New interface to hash functionality.
  - New tree hash tables.
  - C-port to speed up tree hash tables.
  - New generic hash function in particular for compressed vectors/mats.
  - ORB_EstimateOrbitSize using birthday paradox.
  - Fix normalin component for product replacer objects.
  - Various fixes and improvements of orbit-by-suborbit stuff.
  - New HISTORY file for release history.


==========================
 Changes from 1.5 -> 2.0:
==========================

  - Variant of "rattle" for random elements in normal closure.
  - Fixed 64bit issue for hash functions for compressed vectors.
  - Make compatible to GAP 4.4 again
  - New chapter as a worked out example of OrbitBySuborbit technology
  - Update of documentation to code
  - Sort out licensing business
  - Clean up examples directory
  - Added Co1 example to documentation
  - Added M11 example to documentation
  - Added Fi23 example to documentation
  - Use new "cheap" option of SmallerDegreePermutationRepresentation
  - Release revision 211 as version 2.0


==========================
 Changes from 1.4 -> 1.5:
==========================

  - Fixed documentation of ActionOnOrbit.
  - New FindSuborbits methods and OrbitIntersectionMatrix to compute